refactor: adjust parameter and response
